--- a/client/home/views/home.ng.html
+++ b/client/home/views/home.ng.html
@@ -1,6 +1,5 @@
-<h1>Seja bem-vindo ao sistema de mentorias da Agripa.</h1>
+<h1 class="no-margin-top">Seja bem-vindo ao sistema de mentorias da Agripa.</h1>
 
-<h2>Esse sistema ainda está em desenvolvimento.
-</h2>
+<h2>Esse sistema ainda está em desenvolvimento.</h2>
 
 <h3>Obrigado, Equipe de desenvolvimento.</h3>
