--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -1,120 +1,135 @@
-.space-header{
-  margin-top: 100px;
+.space-header {
+    margin-top : 100px;
 }
 
 body {
-  background: url('/resources/background.png') no-repeat fixed;
-  -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    color: #FFFFFF;
+    background              : url('/resources/background.png') no-repeat fixed;
+    -webkit-background-size : cover;
+    -moz-background-size    : cover;
+    -o-background-size      : cover;
+    background-size         : cover;
+    color                   : #FFFFFF;
 }
 
 .img-button {
-  width:45px;
-  height: 17px;
+    width  : 45px;
+    height : 17px;
 }
 
 .logo {
-    width: 320px;
-    height: 100px;
+    width  : 320px;
+    height : 100px;
 }
+
 .row {
-  margin-top: 50px;
+    margin-top : 50px;
 }
 
 .frame-form {
-  border: 2px;
-  border-color: #FFFFFF;
-  border-style: solid;
-  width: 400px;
-  height: 540px;
+    border       : 2px;
+    border-color : #FFFFFF;
+    border-style : solid;
+    width        : 400px;
+    height       : 540px;
 }
+
 .frame-spaces {
-  margin-top:20px;
-  margin-left:20px;
-  margin-right:20px;
-  margin-bottom: 20px;
-  display: block;
+    margin-top    : 20px;
+    margin-left   : 20px;
+    margin-right  : 20px;
+    margin-bottom : 20px;
+    display       : block;
 
 }
 
-button:hover{
-  color:#FFFFFF;
+button:hover {
+    color : #FFFFFF;
 }
 
 input[type=text] {
-  height:30px;
-  border: 0;
-  color: #FFFFFF;
-  background: transparent;
-  width: calc(100% - 2px);
-  margin-left:1px;
-  box-shadow: -8px 10px 0px -8px #FFFFFF, 8px 10px 0px -8px #FFFFFF;
-  -webkit-transition: box-shadow 0.3s;
-  transition: box-shadow 0.3s;
+    height             : 30px;
+    border             : 0;
+    color              : #FFFFFF;
+    background         : transparent;
+    width              : calc(100% - 2px);
+    margin-left        : 1px;
+    box-shadow         : -8px 10px 0px -8px #FFFFFF, 8px 10px 0px -8px #FFFFFF;
+    -webkit-transition : box-shadow 0.3s;
+    transition         : box-shadow 0.3s;
 }
+
 input[type=text]:focus {
-  outline: none;
-  color: #FFFFFF;
-  border:0;
-  background: transparent;
-  box-shadow: -8px 10px 0px -8px #FFFFFF, 8px 10px 0px -8px #FFFFFF;
+    outline    : none;
+    color      : #FFFFFF;
+    border     : 0;
+    background : transparent;
+    box-shadow : -8px 10px 0px -8px #FFFFFF, 8px 10px 0px -8px #FFFFFF;
 }
+
 input[type=password] {
-  height:30px;
-  border: 0;
-  color: #FFFFFF;
-  background: transparent;
-  width: calc(100% - 2px);
-  margin-left:1px;
-  box-shadow: -8px 10px 0px -8px #FFFFFF, 8px 10px 0px -8px #FFFFFF;
-  -webkit-transition: box-shadow 0.3s;
-  transition: box-shadow 0.3s;
+    height             : 30px;
+    border             : 0;
+    color              : #FFFFFF;
+    background         : transparent;
+    width              : calc(100% - 2px);
+    margin-left        : 1px;
+    box-shadow         : -8px 10px 0px -8px #FFFFFF, 8px 10px 0px -8px #FFFFFF;
+    -webkit-transition : box-shadow 0.3s;
+    transition         : box-shadow 0.3s;
 }
+
 input[type=password]:focus {
-  outline: none;
-  color: #FFFFFF;
-  border:0;
-  background: transparent;
-  box-shadow: -8px 10px 0px -8px #FFFFFF, 8px 10px 0px -8px #FFFFFF;
+    outline    : none;
+    color      : #FFFFFF;
+    border     : 0;
+    background : transparent;
+    box-shadow : -8px 10px 0px -8px #FFFFFF, 8px 10px 0px -8px #FFFFFF;
 }
+
 input[type=radio] {
-    -webkit-appearance: checkbox; /* Chrome, Safari, Opera */
-    -moz-appearance: checkbox;    /* Firefox */
-    -ms-appearance: checkbox;     /* not currently supported */
-    border-color: #FFFFFF;
-    background-color: transparent !important;
+    -webkit-appearance : checkbox; /* Chrome, Safari, Opera */
+    -moz-appearance    : checkbox; /* Firefox */
+    -ms-appearance     : checkbox; /* not currently supported */
+    border-color       : #FFFFFF;
+    background-color   : transparent !important;
 
 }
-input[type=submit]:hover{
-    color:#FFFFFF;
+
+input[type=submit]:hover {
+    color : #FFFFFF;
 }
-input[type=submit]:focus{
-    color:#FFFFFF;
+
+input[type=submit]:focus {
+    color : #FFFFFF;
 }
-input[type=submit]:{
-    color:#FFFFFF;
+
+input[type=submit] {
+    color : #FFFFFF;
 }
+
 textarea {
 
-  border: 0;
-  color: #FFFFFF;
-  background: transparent;
-  width: calc(100% - 2px);
-  margin-left:1px;
-  height: 200px;
-  box-shadow: -8px 10px 0px -8px #FFFFFF, 8px 10px 0px -8px #FFFFFF;
-  -webkit-transition: box-shadow 0.3s;
-  transition: box-shadow 0.3s;
-  resize: none;
-  margin-top: 10px;
+    border             : 0;
+    color              : #FFFFFF;
+    background         : transparent;
+    width              : calc(100% - 2px);
+    margin-left        : 1px;
+    height             : 200px;
+    box-shadow         : -8px 10px 0px -8px #FFFFFF, 8px 10px 0px -8px #FFFFFF;
+    -webkit-transition : box-shadow 0.3s;
+    transition         : box-shadow 0.3s;
+    resize             : none;
+    margin-top         : 10px;
 }
+
 textarea:focus {
-  outline: none;
-  color: #FFFFFF;
-  border:0;
-  background: transparent;
-  box-shadow: -8px 10px 0px -8px #FFFFFF, 8px 10px 0px -8px #FFFFFF;
+    outline    : none;
+    color      : #FFFFFF;
+    border     : 0;
+    background : transparent;
+    box-shadow : -8px 10px 0px -8px #FFFFFF, 8px 10px 0px -8px #FFFFFF;
+}
+
+.no-margin-top {
+    margin-top : 0;
 }
