--- a/client/perfis/views/proximaEtapa.ng.html
+++ b/client/perfis/views/proximaEtapa.ng.html
@@ -1,4 +1,4 @@
-<div class="login-home frame-form container text-center">
+<div class="login-home frame-form container text-center space-header">
     <form class="login-form frame-spaces">
         <div class="row ">
             <div class="twelve columns container">
@@ -6,9 +6,9 @@
                 <h4 class="text-center">Cadastro concluído com sucesso</h4>
                 <h4 class="text-center">O que deseja fazer agora?</h4><br/>
 
-                <button class="buttonLogin" href="/cadastrar-empresa">Cadastra Empresa</button>
+                <a class="button" href="/cadastroEmpresa">Cadastrar Empresa</a>
                 <br/>
-                <button class="buttonLogin" href="/perfil">Visualizar Perfil</button>
+                <a class="button" href="/perfil">Visualizar Perfil</a>
             </div>
             <!-- end six columns-->
         </div>
