--- a/client/home/views/home.ng.html
+++ b/client/home/views/home.ng.html
@@ -1,5 +1,5 @@
-<h1 class="no-margin-top">Seja bem-vindo ao sistema de mentorias da Agripa.</h1>
-
-<h2>Esse sistema ainda está em desenvolvimento.</h2>
-
-<h3>Obrigado, Equipe de desenvolvimento.</h3>
+<div class="container-fluid">
+  <div layout="row" layout-align="center center">
+    <div flex><p > home em construção.</p></div>
+</div>
+</div>
