problemas que eu não sei a origem. Testem, por favor.

--- a/client/perfis/views/login.ng.html
+++ b/client/perfis/views/login.ng.html
@@ -10,7 +10,7 @@
             <!-- end six columns-->
         </div>
         <!-- end row-->
-        <div class="row">
+        <div class="row" style="margin-top:50px;">
             <div class="twelve columns container">
                 <ul class="nav nav-justified">
                     <li>
