--- a/client/perfis/views/cadastroPerfil.ng.html
+++ b/client/perfis/views/cadastroPerfil.ng.html
@@ -2,7 +2,7 @@
 <div class="login-home frame-form container text-center space-header">
     <form class="login-form frame-spaces">
         <div ng-show="mostrarEtapa(0)">
-            <div class="row ">
+            <div class="row" style="margin-top:50px;">
                 <img class="logo" src="../resources/Logo-Agripa.png"/>
 
                 <div class="twelve columns container">
@@ -13,7 +13,7 @@
                 <!-- end twelve columns-->
             </div>
             <!-- end row-->
-            <div class="row">
+            <div class="row" style="margin-top:50px;">
                 <radiogroup>
                     <div class="six columns container">
                         <input type="radio" ng-model="nUser.tipo_conta" id="mentor" name="role" value="mentor"><label for="mentor">Mentor</label>
@@ -22,17 +22,19 @@
                         <input type="radio" ng-model="nUser.tipo_conta" name="role" id="empreendedor" value="empreendedor"><label for="empreendedor">Empreendedor</label>
                     </div>
                 </radiogroup>
-                <radiogroup>
-                    <div class="six columns container">
-                        <input type="radio" ng-model="nUser.genero" id="masculino" name="genero" value="masculino"><label for="masculino">Masculino</label>
-                    </div>
-                    <div class="six columns container">
-                        <input type="radio" ng-model="nUser.genero" name="genero" id="feminino" value="feminino"><label for="feminino">Feminino</label>
-                    </div>
-                </radiogroup>
+            </div>
+            <div class="row" style="margin-top:50px;">
+              <radiogroup>
+                  <div class="six columns container">
+                      <input type="radio" ng-model="nUser.genero" id="masculino" name="genero" value="masculino"><label for="masculino">Masculino</label>
+                  </div>
+                  <div class="six columns container">
+                      <input type="radio" ng-model="nUser.genero" name="genero" id="feminino" value="feminino"><label for="feminino">Feminino</label>
+                  </div>
+              </radiogroup>
             </div>
             <!-- Botões de navegação-->
-            <div class="row">
+            <div class="row" style="margin-top:50px;">
                 <div class="twelve columns container">
                     <ul class="nav nav-justified">
                         <li>
@@ -44,7 +46,7 @@
         </div>
         <!-- Breve descrição-->
         <div ng-show="mostrarEtapa(1)">
-            <div class="row ">
+            <div class="row " style="margin-top:50px;">
                 <img class="logo" src="../resources/Logo-Agripa.png"/>
 
                 <div class="twelve columns container">
@@ -53,7 +55,7 @@
                 <!-- end twelve columns-->
             </div>
             <!-- end row-->
-            <div class="row">
+            <div class="row" style="margin-top:50px;">
                 <div class="twelve columns container">
                     <ul class="nav nav-justified">
                         <li>
@@ -68,7 +70,7 @@
         </div>
         <!-- tags expertise-->
         <div ng-show="mostrarEtapa(2)">
-            <div class="row ">
+            <div class="row " style="margin-top:50px;">
                 <img class="logo" src="../resources/Logo-Agripa.png"/>
 
                 <div class="twelve columns container">
@@ -79,7 +81,7 @@
                 <!-- end twelve columns-->
             </div>
             <!-- end row-->
-            <div class="row">
+            <div class="row" style="margin-top:50px;">
                 <div class="twelve columns container">
 
                     <ul class="nav nav-justified">
@@ -96,7 +98,7 @@
         </div>
         <!-- Redes sociais-->
         <div ng-show="mostrarEtapa(3)">
-            <div class="row ">
+            <div class="row " style="margin-top:50px;">
                 <img class="logo" src="../resources/Logo-Agripa.png"/>
 
                 <div class="twelve columns container">
@@ -105,14 +107,16 @@
                     <input type="text" name="linkedIn" ng-model="nUser.linkedIn" placeholder="linkedin">
                     <br>
 
-                    <div ng-controller="AddPhotoController">
-                        <input type="file" ng-model="nUser.file"  onchange="angular.element(this).scope().addImages(this.files)" value="escolher foto">
+                    <div>
+                        <input type="file" ng-model="fileF" onchange="angular.element(this).scope().addTempImage(this.files)" value="escolher foto">
+                        <p ng-show="feedbackUpload">Upload realizado com sucesso!</p>
+                        <button ng-click="addImages()" style="margin-top:20px;">Upload</button>
                     </div>
                 </div>
                 <!-- end twelve columns-->
             </div>
             <!-- end row-->
-            <div class="row">
+            <div class="row" style="margin-top:50px;">
                 <div class="twelve columns container">
 
                     <ul class="nav nav-justified">
