- Mensagem de erros: 'Senha incorreta' e 'Usuário não encontrado'.'

--- a/client/perfis/views/login.ng.html
+++ b/client/perfis/views/login.ng.html
@@ -6,6 +6,7 @@
                 <h4 class="text-center">Bem-vindo ao sistema de gestão de mentorias</h4>
                 <input type="text" ng-model="aUser.email" placeholder="e-mail">
                 <input type="password" ng-model="aUser.senha" placeholder="senha">
+                <span>{{error}}</span>
             </div>
             <!-- end six columns-->
         </div>
