Login com enter

--- a/client/perfis/views/login.ng.html
+++ b/client/perfis/views/login.ng.html
@@ -4,8 +4,8 @@
             <div class="twelve columns container">
                 <img class="logo" src="../resources/Logo-Agripa.png"/>
                 <h4 class="text-center">Bem-vindo ao sistema de gestão de mentorias</h4>
-                <input type="text" ng-model="aUser.email" placeholder="e-mail">
-                <input type="password" ng-model="aUser.senha" placeholder="senha">
+                <input ng-keyup="$event.keyCode == 13 && login(aUser)()" type="text" ng-model="aUser.email" placeholder="e-mail">
+                <input ng-keyup="$event.keyCode == 13 && login(aUser)()" type="password" ng-model="aUser.senha" placeholder="senha">
                 <span>{{error}}</span>
             </div>
             <!-- end six columns-->
